; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_get_epp_protocol.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_get_epp_protocol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_IVAR_EPP_PROTO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ppb_get_epp_protocol(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @ppb_assert_locked(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @device_get_parent(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @PPC_IVAR_EPP_PROTO, align 4
  %10 = call i32 @BUS_READ_IVAR(i32 %7, i32 %8, i32 %9, i64* %3)
  %11 = load i64, i64* %3, align 8
  %12 = trunc i64 %11 to i32
  ret i32 %12
}

declare dso_local i32 @ppb_assert_locked(i32) #1

declare dso_local i32 @BUS_READ_IVAR(i32, i32, i32, i64*) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
